# GenAI-Gateway-Resilience-Service-Example

./: README.md
{{cookiecutter.repo_name}}/: Dockerfile  README.md  pyproject.toml
{{cookiecutter.repo_name}}/src/: create_app.py  dependency_container.py  main.py  settings.py
{{cookiecutter.repo_name}}/src/api/routers/: __init__.py  openai.py  root.py  settings.py  status.py  version.py
{{cookiecutter.repo_name}}/src/core/exceptions/: api_exception.py
{{cookiecutter.repo_name}}/src/core/model/: circuit.py
{{cookiecutter.repo_name}}/src/infrastructure/repositories/: circuit_breaker_repository.py  in_memory_circuit_breaker_repository.py
{{cookiecutter.repo_name}}/src/services/: __init__.py  circuit_breaker_service.py
{{cookiecutter.repo_name}}/test/: test_create_app.py  test_e2e.py  test_exception_handling.py
{{cookiecutter.repo_name}}/test/resources/: __init__.py  test_base.py
{{cookiecutter.repo_name}}/test/resources/stubs/: __init__.py  settings_stub.py
{{cookiecutter.repo_name}}/test/test_core/model/: test_circuit.py
{{cookiecutter.repo_name}}/test/test_infrastructure/repositories/: test_in_memory_circuit_breaker_repository.py
{{cookiecutter.repo_name}}/test/test_routers/: test_openai.py  test_root.py  test_settings.py  test_status.py  test_version.py
{{cookiecutter.repo_name}}/test/test_services/: test_circuit_breaker_service.py
